gh 1541 UII+ test program.

--- a/arch/c64/Makefile
+++ b/arch/c64/Makefile
@@ -27,4 +27,4 @@ clean:
 	rm -f ${TRG} c64rom.lab c64rom.l c64rom.o65 boot.tgz
 	(cd boot; ${MAKE} clean;)
 	(cd apps; ${MAKE} clean;)
-
+	(cd test; ${MAKE} clean;)
